<resources>
    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="category_color">Category Color</string>
    <string name="add_color">Add Color</string>
    <string name="categories">Categories</string>
    <string name="tasks_to_do">Tasks To Do</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="enter_task_information">Enter Task Information</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="category">Category</string>
    <string name="add_new_category">+ Add New Category</string>
    <string name="new_task">New Task</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="low_priority_tasks">Low priority tasks</string>
    <string name="medium_priority_tasks">Medium priority tasks</string>
    <string name="high_priority_tasks">High priority tasks</string>
    <string name="general">General</string>
    <string name="rate_the_app">Rate the app</string>
</resources>