<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.NewTaskFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/create_task"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/enter_task_information" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dateAndTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText"
                    android:layout_marginStart="10dp"
                    android:text="@string/due_date"
                    app:chipIcon="@drawable/ic_baseline_date_range_24" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/isCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateAndTimePicker"
                    android:layout_marginStart="8dp"
                    android:text="@string/completed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isCompleted"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/priorityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/priority"
                        app:chipIcon="@drawable/ic_baseline_priority_high_24" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/priorityChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:checkedChip="@id/low"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/low"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/low" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/mid"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/high"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/high" />

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/categoryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/category"
                        app:chipIcon="@drawable/ic_baseline_category_24" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/categoryChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:chipSpacingVertical="1dp"
                        app:chipSpacingHorizontal="4dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_marginStart="10dp"
                            android:text="@string/add_new_category"/>

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/new_task"
            android:backgroundTint="@color/light_blue"
            app:icon="@drawable/ic_baseline_keyboard_arrow_up_24"
            app:iconGravity="end"
            app:iconPadding="3dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>